--- a/src/globalStyles/vars.scss
+++ b/src/globalStyles/vars.scss
@@ -7,6 +7,7 @@
   --brand-primary: #2db34a;
   --brand-primary-contrast: #ff7c30;
   --brand-secondary: #0086cd;
+  --brand-secondary-contrast: #86d1f9;
 
   --title-font-family: 'Montserrat', sans-serif;
   --body-font-family: 'Open Sans', sans-serif;;
